Integreate the new toml parser