@@ -17,15 +17,30 @@
  */
 package io.ballerina.projects.directory;
 
+import io.ballerina.projects.PackageDescriptor;
+import io.ballerina.projects.PackageName;
+import io.ballerina.projects.PackageOrg;
+import io.ballerina.projects.PackageVersion;
 import io.ballerina.projects.utils.ProjectUtils;
+import io.ballerina.toml.Toml;
+import io.ballerina.toml.ast.TomlDiagnostic;
+import io.ballerina.toml.ast.TomlNodeLocation;
+import io.ballerina.toml.ast.TomlTable;
+import io.ballerina.toml.ast.TomlTransformer;
+import io.ballerina.toml.ast.TomlValidator;
+import io.ballerina.toml.syntax.tree.ModulePartNode;
+import io.ballerina.toml.syntax.tree.SyntaxTree;
+import io.ballerina.tools.diagnostics.Diagnostic;
+import io.ballerina.tools.text.TextDocument;
+import io.ballerina.tools.text.TextDocuments;
 
 import java.io.IOException;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.PathMatcher;
-import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -43,13 +58,13 @@ public class ProjectFiles {
     private ProjectFiles() {
     }
 
-    protected static PackageData loadPackageData(String filePath, boolean singleFileProject) {
+    protected static PackageData loadPackageData(Path filePath, boolean singleFileProject) {
         // Handle single file project
         if (singleFileProject) {
-            DocumentData documentData = loadDocument(Paths.get(filePath));
-            ModuleData defaultModule = ModuleData.from(Paths.get(filePath), Collections.singletonList(documentData),
+            DocumentData documentData = loadDocument(filePath);
+            ModuleData defaultModule = ModuleData.from(filePath, Collections.singletonList(documentData),
                     Collections.emptyList());
-            return PackageData.from(Paths.get(filePath), defaultModule, Collections.emptyList());
+            return PackageData.from(filePath, defaultModule, Collections.emptyList());
         }
 
         // Handle build project
@@ -58,7 +73,7 @@ public class ProjectFiles {
         }
 
         // Check whether the directory exists
-        Path packageDirPath = Paths.get(filePath).toAbsolutePath();
+        Path packageDirPath = filePath.toAbsolutePath();
         if (!packageDirPath.toFile().canRead()
                 || !packageDirPath.toFile().canWrite() || !packageDirPath.toFile().canExecute()) {
             throw new RuntimeException("insufficient privileges to path: " + packageDirPath);
@@ -142,10 +157,60 @@ public class ProjectFiles {
             throw new RuntimeException("document path cannot be null");
         }
         try {
-            content = new String(Files.readAllBytes(documentFilePath), Charset.defaultCharset());
+            content = Files.readString(documentFilePath, StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
         return DocumentData.from(Optional.of(documentFilePath.getFileName()).get().toString(), content);
+    }
+
+    public static SyntaxTree parseToml(Path tomlFilePath) {
+        try {
+            String tomlStr = Files.readString(tomlFilePath, StandardCharsets.UTF_8);
+            TextDocument textDocument = TextDocuments.from(tomlStr);
+            return SyntaxTree.from(textDocument, tomlFilePath.toString());
+        } catch (IOException e) {
+            // TODO Error handling
+            throw new RuntimeException("Failed to read the Ballerina.toml", e);
+        }
+    }
+
+    private static Toml getTomlModel(SyntaxTree tomlSyntaxTree) {
+        List<TomlDiagnostic> diagnostics = new ArrayList<>();
+        diagnostics.addAll(reportSyntaxDiagnostics(tomlSyntaxTree));
+        TomlTransformer nodeTransformer = new TomlTransformer();
+        TomlTable transformedTable = (TomlTable) nodeTransformer.transform((ModulePartNode) tomlSyntaxTree.rootNode());
+        TomlValidator tomlValidator = new TomlValidator();
+        tomlValidator.visit(transformedTable);
+        transformedTable.setSyntacticalDiagnostics(diagnostics);
+        diagnostics.addAll(transformedTable.collectSemanticDiagnostics());
+        return new Toml(transformedTable);
+    }
+
+    private static List<TomlDiagnostic> reportSyntaxDiagnostics(SyntaxTree tree) {
+        List<TomlDiagnostic> diagnostics = new ArrayList<>();
+        for (Diagnostic syntaxDiagnostic : tree.diagnostics()) {
+            TomlNodeLocation tomlNodeLocation = new TomlNodeLocation(syntaxDiagnostic.location().lineRange(),
+                    syntaxDiagnostic.location().textRange());
+            TomlDiagnostic tomlDiagnostic =
+                    new TomlDiagnostic(tomlNodeLocation, syntaxDiagnostic.diagnosticInfo(), syntaxDiagnostic.message());
+            diagnostics.add(tomlDiagnostic);
+        }
+        return diagnostics;
+    }
+
+    public static PackageDescriptor createPackageDescriptor(SyntaxTree tomlSyntaxTree) {
+        Toml tomlModel = getTomlModel(tomlSyntaxTree);
+        if (!tomlModel.getDiagnostics().isEmpty()) {
+            // TODO proper error handling
+            throw new RuntimeException("Ballerina.toml file has toml syntax errors");
+        }
+
+        Toml pkgTable = tomlModel.getTable("package");
+        PackageName packageName = PackageName.from(pkgTable.getString("name"));
+        PackageOrg packageOrg = PackageOrg.from(pkgTable.getString("org"));
+        PackageVersion packageVersion = PackageVersion.from(pkgTable.getString("version"));
+        // TODO Populate dependencies
+        return new PackageDescriptor(packageName, packageOrg, packageVersion, Collections.emptyList());
     }
 }
